--- a/index.html
+++ b/index.html
@@ -123,16 +123,67 @@
 </Section>
 
 <div class= " hidden lg:visible bg-white drop-shadow-xl lg:flex max-w-xl mx-auto rounded-md lg:-mt-20 xl:-mt-32 py-5 px-10 lg:max-w-3xl xl:max-w-6xl justify-between">
-<div class="w-24"><img src="./images/fruit1.png" alt="Strawberry">
-    <h6 class="text-center">Strawberry</h6></div>
-    <div class="w-24"><img src="./images/fruit9.png" alt="Orange">
-        <h6 class="text-center">Orange</h6></div>
+<div class="w-24"><img src="./images/fruit1.png" alt="grapes">
+    <h6 class="text-center">Grapes</h6></div>
+    <div class="w-24"><img src="./images/fruit3.png" alt="Mango">
+      <h6 class="text-center">Mango</h6></div>
         <div class="w-24"><img src="./images/fruit3.png" alt="Mango">
             <h6 class="text-center">Mango</h6></div>
             <div class="w-24"><img src="./images/fruit4.png" alt="Strawberry">
                 <h6 class="text-center">Strawberry</h6></div>
                 <div class="w-24"><img src="./images/fruit4.png" alt="Strawberry">
                     <h6 class="text-center">Strawberry</h6></div></div>
+
+                    <!-- hero section start -->
+
+                    <!-- deal of the day section -->
+
+                    <Section class="deal hero my-2 md:my-7 lg:my-9 mx-auto">
+<div class="mx-auto">
+  <div class="mx-auto flex justify-center items-center"><div class="flex-1"><h1 class="text-center">Deal of the day</h1>
+    <p class="text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p></div>
+    <div class="flex-1 justify-end grid grid-flow-col gap-5 text-center auto-cols-max">
+      <div class="flex flex-col">
+        <span class="countdown font-mono text-5xl">
+          <span style="--value:15;"></span>
+        </span>
+        days
+      </div> 
+      <div class="flex flex-col">
+        <span class="countdown font-mono text-5xl">
+          <span style="--value:10;"></span>
+        </span>
+        hours
+      </div> 
+      <div class="flex flex-col">
+        <span class="countdown font-mono text-5xl">
+          <span style="--value:24;"></span>
+        </span>
+        min
+      </div> 
+      <div class="flex flex-col">
+        <span class="countdown font-mono text-5xl">
+          <span style="--value:56;"></span>
+        </span>
+        sec
+      </div>
+    </div></div>
+  <div class="card bg-base-100 shadow-xl">
+    <figure class="px-10 pt-10">
+      <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+    </figure>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Shoes!</h2>
+      <p>If a dog chews shoes whose shoes does he choose?</p>
+      <div class="card-actions">
+        <button class="btn btn-primary">Buy Now</button>
+      </div>
+    </div>
+  </div>
+  <div><input type="button" value="Input" class="btn" /></div>
+</div>
+
+                    </Section>
 
 
 
