--- a/index.html
+++ b/index.html
@@ -138,32 +138,35 @@
 
                     <!-- deal of the day section -->
 
-                    <Section class="deal hero my-2 md:my-7 lg:my-9 mx-auto">
+                    <Section class="deal hero my-2 md:my-7 lg:my-32 mx-auto">
 <div class="mx-auto">
-  <div class="mx-auto flex justify-center items-center"><div class="flex-1"><h1 class="text-center">Deal of the day</h1>
-    <p class="text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p></div>
-    <div class="flex-1 justify-end grid grid-flow-col gap-5 text-center auto-cols-max">
+  <div class="mx-auto flex pl-14 justify-center items-center"><div class="flex-1"><h1 class="text-left font-extrabold text-5xl text-[#121212]">Deal of the day</h1>
+    <p class="text-left text-sm font-medium text-[#121212]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p></div>
+    <div class="flex-1 pr-14 justify-end grid grid-flow-col gap-5 text-center auto-cols-max">
       <div class="flex flex-col">
-        <span class="countdown font-mono text-5xl">
-          <span style="--value:15;"></span>
-        </span>
+        <span class="countdown font-extrabold text-5xl">
+          <span style="--value:29;"></span>
+          <img src="./images/Frame.svg" class="w-1 ml-5" alt="">
+          </span>
         days
       </div> 
       <div class="flex flex-col">
-        <span class="countdown font-mono text-5xl">
-          <span style="--value:10;"></span>
+        <span class="countdown font-extrabold text-5xl">
+          <span style="--value:15;"></span>
+          <img src="./images/Frame.svg" class="w-1 ml-5" alt="">
         </span>
         hours
       </div> 
       <div class="flex flex-col">
-        <span class="countdown font-mono text-5xl">
-          <span style="--value:24;"></span>
+        <span class="countdown font-extrabold text-5xl">
+          <span style="--value:25;"></span>
+          <img src="./images/Frame.svg" class="w-1 ml-5" alt="">
         </span>
         min
       </div> 
       <div class="flex flex-col">
-        <span class="countdown font-mono text-5xl">
-          <span style="--value:56;"></span>
+        <span class="countdown font-extrabold text-5xl">
+          <span style="--value:08;"></span>
         </span>
         sec
       </div>
