--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
 
                      <!-- deal of the day end -->
 
-                     <!-- team section -->
+                     <!-- team section start -->
 
-                  <section class="w-xs text-white text-center bg-gradient-to-r max-w-2xl mx-auto rounded-md py-20 px-10 lg:max-w-4xl xl:max-w-7xl justify-between" style="background-image: url(./images/team.png); background-size: cover; background-repeat: no-repeat; background-position: center; background-color: rgba(18, 18, 18, 0.5);">   
-                    <div><h1 class="text-center text-2xl font-extrabold lg:text-5xl">Meet the team section</h1>
+                  <section class="max-w-xs text-white text-center mt-20 py-5 bg-gradient-to-r md:max-w-2xl mx-auto rounded-md md:py-20 px-10 lg:max-w-4xl xl:max-w-7xl justify-between" style="background-image: url(./images/team.png); background-size: cover; background-repeat: no-repeat; background-position: center; background-color: rgba(18, 18, 18, 0.5);">   
+                    <div><h1 class="text-center text-xl font-extrabold lg:text-5xl">Meet the team section</h1>
                     <p class="text-center text-xs lg:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p></div>
-                    <div class="flex justify-around mt-20"><div class="meet"><div class="avatar">
+                    <div class="flex flex-wrap mt-3 flex-col md:flex-row justify-around md:mt-20"><div class="meet"><div class="avatar">
                       <div class="w-24 rounded-full mt-10">
                         <img src="/images/member1.png"/>
                         </div>
@@ -312,33 +312,35 @@
                   <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
                   <div class="meet"><div class="avatar">
                     <div class="w-24 rounded-full mt-10">
-                      <img src="/images/member1.png"/>
+                      <img src="/images/member2.png"/>
                       </div>
-                  </div><div><h1 class="font-bold text-2xl">Awlad Hossain</h1>
+                  </div><div><h1 class="font-bold text-2xl">Safia Chowdhury</h1>
                     <p>Fruits Expert</p></div>
                   <div class="flex justify-center gap-3 mt-2"><div><i class="fa-brands fa-facebook" style="color: #f85559;"></i></div>
                 <div><i class="fa-brands fa-twitter" style="color: #f85559;"></i></div>
                 <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
                 <div class="meet"><div class="avatar">
                   <div class="w-24 rounded-full mt-10">
-                    <img src="/images/member1.png"/>
+                    <img src="/images/member3.png"/>
                     </div>
-                </div><div><h1 class="font-bold text-2xl">Awlad Hossain</h1>
+                </div><div><h1 class="font-bold text-2xl">Rokib Hossain</h1>
                   <p>Fruits Expert</p></div>
                 <div class="flex justify-center gap-3 mt-2"><div><i class="fa-brands fa-facebook" style="color: #f85559;"></i></div>
               <div><i class="fa-brands fa-twitter" style="color: #f85559;"></i></div>
               <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
               <div class="meet"><div class="avatar">
                 <div class="w-24 rounded-full mt-10">
-                  <img src="/images/member1.png"/>
+                  <img src="/images/member4.png"/>
                   </div>
-              </div><div><h1 class="font-bold text-2xl">Awlad Hossain</h1>
+              </div><div><h1 class="font-bold text-2xl">Chaity</h1>
                 <p>Fruits Expert</p></div>
               <div class="flex justify-center gap-3 mt-2"><div><i class="fa-brands fa-facebook" style="color: #f85559;"></i></div>
             <div><i class="fa-brands fa-twitter" style="color: #f85559;"></i></div>
             <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div></div>
 
                 </div></section>
+
+                 <!-- team section end -->
 
 
 
