--- a/index.html
+++ b/index.html
@@ -196,7 +196,33 @@
             <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
           </div></div>
           <div class="card-actions">
-            <a class="pb-5" href="">Details</a>
+            <!-- Open the modal using ID.showModal() method -->
+<button class="btn bg-white border-none" onclick="my_modal_1.showModal()">Details</button>
+<dialog id="my_modal_1" class="modal">
+  <form method="dialog" class="modal-box">
+    <img src="./images/fruit6.png" class="mx-auto" alt="Apple">
+    <h3 class="font-bold text-2xl pt-7">Apple</h3>
+    <p class="py-4">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+    <div class="my-5"><div class="rating rating-lg rating-half">
+      <input type="radio" name="rating-10" class="rating-hidden" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+    </div></div>
+    <div class="modal-action justify-center">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn bg-white border-[#f85559]">Close</button>
+      <button class="btn bg-[#f85559]">BUY NOW</button>
+    </div>
+  </form>
+</dialog>
           </div>
         
    
