--- a/index.html
+++ b/index.html
@@ -443,6 +443,37 @@
 
                  <!-- team section end -->
 
+
+                 <!-- why us section start -->
+
+                 <Section class="mx-auto max-w-screen-xl my-20">
+<Div><h1 class="text-center text-xl font-extrabold lg:text-5xl">Why Choose Us</h1>
+<p class="text-center text-xs lg:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p></Div>
+
+<div class="flex mt-10"><div class="icon"><div class="flex"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="flex my-7"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="flex"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div></div>
+
+<div><img src="./images/whychoose1.png" alt="whychoose1"></div>
+
+<div class="icon"><div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="flex my-7 flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div></div></div>
+          
+                 </Section>
+
                  <!-- footer section start -->
 
                  <footer><footer class="footer footer-center p-10 bg-[#121212] text-white rounded">
