--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@
 <div><img src="./images/whychoose1.png" alt="whychoose1"></div>
 
 <div class="icon"><div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
+<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
 <div class="flex my-7 flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
+<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
+<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
 <div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div></div></div>
+<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
+<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div></div></div>
           
                  </Section>
 
