--- a/index.html
+++ b/index.html
@@ -447,32 +447,35 @@
                  <!-- why us section start -->
 
                  <Section class="mx-auto max-w-screen-xl my-20">
-<Div><h1 class="text-center text-xl font-extrabold lg:text-5xl">Why Choose Us</h1>
-<p class="text-center text-xs lg:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p></Div>
+<Div><h1 class="text-center text-xl font-extrabold md:text-5xl">Why Choose Us</h1>
+<p class="max-w-xs mx-at text-center text-xs mx-auto mt-2 md:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p></Div>
 
-<div class="flex mt-10"><div class="icon"><div class="flex"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
-<div class="flex my-7"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div>
-<div class="flex"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="ml-4"><h1 class="font-extrabold text-3xl border-b pb-2">Dedicated Team</h1>
-<p class="mt-2">Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p></div></div></div>
+<div class="max-w-xs mx-auto mt-10  md:max-w-4xl xl:max-w-7xl"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
 
-<div><img src="./images/whychoose1.png" alt="whychoose1"></div>
+<div class="flex flex-col lg:flex-row mt-10"><div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
+<div class="flex my-7 text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
+<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div></div>
+<div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
+<div class="my-7 flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
+<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div>
 
-<div class="icon"><div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
-<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex my-7 flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
-<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex flex-row-reverse"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mr-4"><h1 class="font-extrabold text-3xl border-b pb-2 text-right">Dedicated Team</h1>
-<p class="mt-2 text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div></div></div>
+</div></div></div>
           
                  </Section>
+
+                  <!-- why us section end -->
 
                  <!-- footer section start -->
 
