--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <p class="text-center text-xs lg:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p></div>
                     <div class="flex flex-wrap mt-3 flex-col md:flex-row justify-around md:mt-20"><div class="meet"><div class="avatar">
                       <div class="w-24 rounded-full mt-10">
-                        <img src="/images/member1.png"/>
+                        <img src="./images/member1.png"/>
                         </div>
                     </div><div><h1 class="font-bold text-2xl">Awlad Hossain</h1>
                       <p>Fruits Expert</p></div>
@@ -413,7 +413,7 @@
                   <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
                   <div class="meet"><div class="avatar">
                     <div class="w-24 rounded-full mt-10">
-                      <img src="/images/member2.png"/>
+                      <img src="./images/member2.png"/>
                       </div>
                   </div><div><h1 class="font-bold text-2xl">Safia Chowdhury</h1>
                     <p>Fruits Expert</p></div>
@@ -422,7 +422,7 @@
                 <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
                 <div class="meet"><div class="avatar">
                   <div class="w-24 rounded-full mt-10">
-                    <img src="/images/member3.png"/>
+                    <img src="./images/member3.png"/>
                     </div>
                 </div><div><h1 class="font-bold text-2xl">Rokib Hossain</h1>
                   <p>Fruits Expert</p></div>
@@ -431,7 +431,7 @@
               <div><i class="fa-brands fa-linkedin-in" style="color: #f85559;"></i></div></div> </div>
               <div class="meet"><div class="avatar">
                 <div class="w-24 rounded-full mt-10">
-                  <img src="/images/member4.png"/>
+                  <img src="./images/member4.png"/>
                   </div>
               </div><div><h1 class="font-bold text-2xl">Chaity</h1>
                 <p>Fruits Expert</p></div>
@@ -450,25 +450,25 @@
 <Div><h1 class="text-center text-xl font-extrabold md:text-5xl">Why Choose Us</h1>
 <p class="max-w-xs mx-at text-center text-xs mx-auto mt-2 md:text-sm font-normal">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p></Div>
 
-<div class="max-w-xs mx-auto mt-10  md:max-w-4xl xl:max-w-7xl"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
+<div class="max-w-xs mx-auto mt-10  md:max-w-4xl lg:hidden"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
 
 <div class="flex flex-col lg:flex-row mt-10"><div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
 <div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
 <p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex my-7 text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="flex my-7 text-center items-center flex-col lg:flex-row"> <div> <img src="./images/love.png" alt="love"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Fresh is Best</h1>
 <p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/gift.png" alt="gift"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Gifts Certificates</h1>
 <p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div></div>
-<div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/fruit.png" alt="fruit"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">integrated Supplier</h1>
 <p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="my-7 flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="my-7 flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/ice.png" alt="ice"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Sustainable Practice</h1>
 <p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/hand.png" alt="hand"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">The Benefit Only</h1>
 <p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div>
 
 </div></div></div>
