--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
 <div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/gift.png" alt="gift"></div>
 <div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Gifts Certificates</h1>
 <p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div></div>
+
+<div class="hidden mx-auto mt-10 lg:block"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
+
 <div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/fruit.png" alt="fruit"></div>
 <div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">integrated Supplier</h1>
 <p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
