--- a/index.html
+++ b/index.html
@@ -452,27 +452,27 @@
 
 <div class="max-w-xs mx-auto mt-10  md:max-w-4xl lg:hidden"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
 
-<div class="flex flex-col lg:flex-row mt-10"><div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Dedicated Team</h1>
+<div class="flex flex-col lg:flex-row mt-10"><div class="icon"><div class="flex text-center items-center flex-col lg:text-left lg:items-start lg:flex-row"> <div> <img src="./images/human.png" alt="group"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-left">Dedicated Team</h1>
+<p class="mt-2 lg:text-left">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
+<div class="flex my-7 text-center items-center flex-col lg:flex-row lg:text-left lg:items-start"> <div> <img src="./images/love.png" alt="love"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-left">Fresh is Best</h1>
 <p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex my-7 text-center items-center flex-col lg:flex-row"> <div> <img src="./images/love.png" alt="love"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Fresh is Best</h1>
-<p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/gift.png" alt="gift"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Gifts Certificates</h1>
-<p class="mt-2">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div></div>
+<div class="flex text-center items-center flex-col lg:flex-row lg:text-left lg:items-start"> <div> <img src="./images/gift.png" alt="gift"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-left">Gifts Certificates</h1>
+<p class="mt-2 lg:text-left">Professional employees are there <br> for you to  pick the most amazing and fresh fruits.</p></div></div></div>
 
 <div class="hidden mx-auto mt-10 lg:block"><img src="./images/whychoose1.png" class="mx-auto" alt="whychoose1"></div>
 
-<div class="icon"><div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/fruit.png" alt="fruit"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">integrated Supplier</h1>
-<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="my-7 flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/ice.png" alt="ice"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">Sustainable Practice</h1>
-<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
-<div class="flex text-center items-center flex-col lg:flex-row"> <div> <img src="./images/hand.png" alt="hand"></div>
-<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2">The Benefit Only</h1>
-<p class="mt-2">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div>
+<div class="icon"><div class="flex text-center items-center flex-col lg:flex-row-reverse lg:text-left lg:items-stretch"> <div> <img src="./images/fruit.png" alt="fruit"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-right">integrated Supplier</h1>
+<p class="mt-2 lg:text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
+<div class="my-7 flex text-center items-center flex-col lg:flex-row-reverse lg:text-left lg:items-stretch"> <div> <img src="./images/ice.png" alt="ice"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-right">Sustainable Practice</h1>
+<p class="mt-2 lg:text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div></div>
+<div class="flex text-center items-center flex-col lg:flex-row-reverse lg:text-left lg:items-stretch"> <div> <img src="./images/hand.png" alt="hand"></div>
+<div class="mx-4"><h1 class="font-extrabold text-base md:text-2xl border-b pb-2 lg:text-right lg:items-stretch">The Benefit Only</h1>
+<p class="mt-2 lg:text-right">Professional employees are there <br> for you to pick the most amazing and fresh fruits.</p></div>
 
 </div></div></div>
           
